recursion.logo.spiral.Spiral.scala.error
Compilation error:
Spiral:1: warning: Detected apparent refinement of Unit; are you missing an '=' sign?
def spiral(steps:Int, angle:Int, length:Int, increment:Int):Unit    {
                                                                    ^Spiral:3: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  penDown()
  ^Spiral:5: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  while(steps>0){
  ^Spiral:15: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  penUp()
  ^